--- a/CypressPraticing/package.json
+++ b/CypressPraticing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cypressproject",
+  "name": "cypresspraticing",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^3.6.0"
+    "cypress": "^5.3.0",
+    "xpath": "0.0.29"
   }
 }
